// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders with active 1`] = `
<li
  className="ax-card ax-card--active"
  onClick={undefined}
>
  Lorem Ipsum
</li>
`;

exports[`Card renders with defaultProps 1`] = `
<li
  className="ax-card"
  onClick={undefined}
>
  Lorem Ipsum
</li>
`;

exports[`Card renders with onClick styles 1`] = `
<li
  className="ax-card ax-card--clickable"
  onClick={[Function]}
>
  Lorem Ipsum
</li>
`;
